Updates to the slides

--- a/slides/slide_05_process_design.html
+++ b/slides/slide_05_process_design.html
@@ -1,9 +1,12 @@
 <!-- Slide 5: Process Design & Production -->
 <section style="background: white !important;">
     <h2>Process Design & Production</h2>
+
     <div class="two-column" style="margin-top: 30px;">
         <div>
-            <h3>Hybrid Production System</h3>
+            <h3><span class="material-icons"
+                    style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">settings</span>Hybrid
+                Production System</h3>
             <div class="highlight-box">
                 <strong>Continuous Production</strong>
                 <ul>
@@ -22,13 +25,18 @@
             </div>
         </div>
         <div>
-            <h3>Manufacturing Technologies</h3>
+            <h3>Manufacturing
+                Technologies</h3>
             <ul>
                 <li><strong>Injection Molding:</strong> Chairs, tables, kitchenware</li>
                 <li><strong>Extrusion:</strong> Pipes and profiles</li>
                 <li><strong>Blow Molding:</strong> Containers and bottles</li>
                 <li><span class="metric">7,500+</span> molds for product variety</li>
             </ul>
+            <!-- Large Central Icon -->
+            <div style="text-align: center; margin: 20px 0;">
+                <span class="material-icons" style="font-size: 18em; color: #E31E24;">precision_manufacturing</span>
+            </div>
         </div>
     </div>
 </section>
