--- a/slides/slide_06_automation.html
+++ b/slides/slide_06_automation.html
@@ -3,7 +3,9 @@
     <h2>Automation & Technology</h2>
     <div class="two-column" style="margin-top: 30px;">
         <div>
-            <h3><span class="material-icons" style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">computer</span>Digital Integration</h3>
+            <h3><span class="material-icons"
+                    style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">computer</span>Digital
+                Integration</h3>
             <ul>
                 <li><strong>ERP Systems:</strong> Production planning, inventory control</li>
                 <li><strong>CAD/CAM:</strong> Mold design & prototyping</li>
@@ -17,7 +19,9 @@
             </ul>
         </div>
         <div>
-            <h3><span class="material-icons" style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">settings</span>Human-Machine Balance</h3>
+            <h3><span class="material-icons"
+                    style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">settings</span>Human-Machine
+                Balance</h3>
             <div class="highlight-box">
                 <ul>
                     <li>Skilled technicians oversee operations</li>
@@ -26,6 +30,10 @@
                     <li>Automated material handling</li>
                     <li>Digital dashboard monitoring</li>
                 </ul>
+            </div>
+            <div style="width:100%; max-width:500px; height:200px; margin-top:15px; margin-left:50px; border-radius:5px; overflow:hidden;">
+                <img src="images/Slide 7.png" alt="RFL Plastics Logo"
+                         style="width:100%; height:100%; object-fit:cover; display:block;">
             </div>
         </div>
     </div>
