--- a/slides/slide_07_workflow.html
+++ b/slides/slide_07_workflow.html
@@ -3,8 +3,12 @@
     <h2>Workflow & Layout Challenges</h2>
     <div class="two-column" style="margin-top: 30px;">
         <div>
+            <!-- Large Central Icon -->
+            <div style="text-align: left;">
+                <span class="material-icons" style="font-size: 15em; color: #E31E24;">account_tree</span>
+            </div>
             <h3>Workflow Management</h3>
-            <ul style="font-size: 0.85em;">
+            <ul style="font-size: 1.2em;">
                 <li><strong>Linear workflow:</strong> Design → Production → QC → Storage</li>
                 <li><strong>JIT practices</strong> for material delivery</li>
                 <li><strong>SOPs</strong> and real-time ERP monitoring</li>
@@ -12,9 +16,11 @@
             </ul>
         </div>
         <div>
-            <h3>Key Challenges</h3>
+            <h3><span class="material-icons"
+                    style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">warning</span>Key Challenges
+            </h3>
             <div class="highlight-box">
-                <ol style="font-size: 0.8em; margin-left: 20px;">
+                <ol style="font-size: 1.2em; margin-left: 20px;">
                     <li><strong>Space Constraints:</strong> Growing machines vs. limited space</li>
                     <li><strong>Inter-Department Coordination:</strong> Communication gaps</li>
                     <li><strong>Material Handling:</strong> Manual delays during peak hours</li>
