--- a/slides/slide_13_improvement.html
+++ b/slides/slide_13_improvement.html
@@ -10,6 +10,12 @@
                 <li><strong>Autonomous Maintenance:</strong> Operator ownership</li>
                 <li><strong>Predictive Maintenance:</strong> Condition monitoring</li>
             </ul>
+            
+            <!-- Large Continuous Improvement Icon -->
+            <div style="text-align: center; margin-top: 50px;">
+                <span class="material-icons" style="font-size: 15em; color: #E31E24;">autorenew</span>
+            </div>
+            
         </div>
         <div>
             <h3>Lean & Six Sigma</h3>
