--- a/slides/slide_02_company_overview.html
+++ b/slides/slide_02_company_overview.html
@@ -3,15 +3,20 @@
     <h2>Company Overview</h2>
     <div class="two-column" style="margin-top: 30px;">
         <div>
-            <h3><span class="material-icons" style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">business</span>About RFL Plastics</h3>
+            <h3><span class="material-icons"
+                    style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">business</span>About RFL
+                Plastics</h3>
             <ul>
                 <li><strong>Parent Company:</strong> PRAN-RFL Group</li>
                 <li><strong>Established:</strong> 2003 (Plastics Division)</li>
                 <li><strong>Market Position:</strong> Largest plastic goods manufacturer in Bangladesh</li>
             </ul>
+            <img src="images/Slide 2 - RFL logo.png" alt="RFL Plastics Logo"
+                style="width: 350px; margin-top: 15px;margin-left:50px;">
         </div>
         <div>
-            <h3><span class="material-icons" style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">factory</span>Key Facts</h3>
+            <h3><span class="material-icons"
+                    style="font-size: 1.2em; vertical-align: middle; margin-right: 10px;">factory</span>Key Facts</h3>
             <ul style="font-size: 0.9em;">
                 <li><span class="metric">20,000+</span> tons/month production</li>
                 <li><span class="metric">80+</span> export countries</li>
