--- a/slides/slide_04_transformation.html
+++ b/slides/slide_04_transformation.html
@@ -27,6 +27,44 @@
                 <li>Custom manufacturing services</li>
                 <li>Strong brand equity</li>
             </ul>
+            <!-- Large Central Icon -->
+            <div >
+                <svg width="400" height="240" viewBox="0 0 320 200"
+                    style="filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.2));">
+                    <!-- Left Circle (Inputs) -->
+                    <circle cx="40" cy="100" r="35" fill="#3498db" opacity="0.8" />
+                    <text x="40" y="105" text-anchor="middle" fill="white" font-size="14"
+                        font-weight="bold">INPUT</text>
+
+                    <!-- Arrow 1 -->
+                    <path d="M 80 100 L 115 100" stroke="#2c3e50" stroke-width="4" fill="none"
+                        marker-end="url(#arrowhead)" />
+
+                    <!-- Center Gear (Process) -->
+                    <circle cx="130" cy="100" r="25" fill="#e74c3c" opacity="0.9" />
+                    <path
+                        d="M 130 75 L 135 85 L 125 85 Z M 155 100 L 145 105 L 145 95 Z M 130 125 L 125 115 L 135 115 Z M 105 100 L 115 95 L 115 105 Z"
+                        fill="#c0392b" />
+                    <circle cx="130" cy="100" r="10" fill="white" />
+                    <text x="130" y="105" text-anchor="middle" fill="#e74c3c" font-size="10" font-weight="bold">⚙</text>
+
+                    <!-- Arrow 2 -->
+                    <path d="M 160 100 L 235 100" stroke="#2c3e50" stroke-width="4" fill="none"
+                        marker-end="url(#arrowhead)" />
+
+                    <!-- Right Circle (Outputs) -->
+                    <circle cx="270" cy="100" r="35" fill="#27ae60" opacity="0.8" />
+                    <text x="270" y="105" text-anchor="middle" fill="white" font-size="13"
+                        font-weight="bold">OUTPUT</text>
+
+                    <!-- Arrow marker definition -->
+                    <defs>
+                        <marker id="arrowhead" markerWidth="10" markerHeight="10" refX="9" refY="3" orient="auto">
+                            <polygon points="0 0, 10 3, 0 6" fill="#2c3e50" />
+                        </marker>
+                    </defs>
+                </svg>
+            </div>
         </div>
     </div>
 </section>
