--- a/slides/slide_09_scheduling.html
+++ b/slides/slide_09_scheduling.html
@@ -1,7 +1,7 @@
 <!-- Slide 9: Scheduling & Bottleneck Management -->
 <section style="background: white !important;">
     <h2>Scheduling & Bottleneck Management</h2>
-    <div class="two-column" style="margin-top: 30px;">
+    <div class="two-column" style="margin-top: 0px;">
         <div>
             <h3>Scheduling Approach</h3>
             <ul>
@@ -9,6 +9,68 @@
                 <li><strong>Batch Grouping:</strong> Same materials/machines together</li>
                 <li><strong>Push System:</strong> Make-to-stock based on forecasts</li>
             </ul>
+            <!-- Scheduling & Bottleneck Flow SVG -->
+            <div style="text-align: center; margin-top: 20px;">
+                <svg width="500" height="320" viewBox="0 0 320 200"
+                    style="filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.2));">
+                    <!-- MPS Box -->
+                    <rect x="100" y="10" width="120" height="35" fill="#3498db" opacity="0.8" rx="5" />
+                    <text x="160" y="32" text-anchor="middle" fill="white" font-size="14" font-weight="bold">MPS</text>
+
+                    <!-- Arrow down -->
+                    <path d="M 160 45 L 160 65" stroke="#2c3e50" stroke-width="3" fill="none"
+                        marker-end="url(#arrowhead)" />
+
+                    <!-- Batch Grouping Box -->
+                    <rect x="85" y="70" width="150" height="30" fill="#27ae60" opacity="0.8" rx="5" />
+                    <text x="160" y="90" text-anchor="middle" fill="white" font-size="13" font-weight="bold">Batch
+                        Grouping</text>
+
+                    <!-- Arrow down -->
+                    <path d="M 160 100 L 160 115" stroke="#2c3e50" stroke-width="3" fill="none"
+                        marker-end="url(#arrowhead)" />
+
+                    <!-- Production Line with Bottlenecks -->
+                    <rect x="20" y="120" width="65" height="30" fill="#E31E24" opacity="0.8" rx="3" />
+                    <text x="52" y="138" text-anchor="middle" fill="white" font-size="11" font-weight="bold">Mold</text>
+                    <text x="52" y="148" text-anchor="middle" fill="white" font-size="9">Setup</text>
+
+                    <path d="M 85 135 L 105 135" stroke="#2c3e50" stroke-width="2" fill="none"
+                        marker-end="url(#arrowhead-small)" />
+
+                    <rect x="110" y="120" width="65" height="30" fill="#f39c12" opacity="0.8" rx="3" />
+                    <text x="142" y="138" text-anchor="middle" fill="white" font-size="11"
+                        font-weight="bold">Cycle</text>
+                    <text x="142" y="148" text-anchor="middle" fill="white" font-size="9">Time</text>
+
+                    <path d="M 175 135 L 195 135" stroke="#2c3e50" stroke-width="2" fill="none"
+                        marker-end="url(#arrowhead-small)" />
+
+                    <rect x="200" y="120" width="100" height="30" fill="#9b59b6" opacity="0.8" rx="3" />
+                    <text x="250" y="138" text-anchor="middle" fill="white" font-size="11"
+                        font-weight="bold">Post-Molding</text>
+
+                    <!-- SMED Badge -->
+                    <rect x="15" y="155" width="75" height="20" fill="#2c3e50" rx="3" />
+                    <text x="52" y="169" text-anchor="middle" fill="white" font-size="10" font-weight="bold">SMED 10min
+                    </text>
+
+                    <!-- OEE Tracking Badge -->
+                    <rect x="230" y="155" width="70" height="20" fill="#2c3e50" rx="3" />
+                    <text x="265" y="169" text-anchor="middle" fill="white" font-size="10" font-weight="bold">OEE
+                        Track</text>
+
+                    <!-- Arrow markers -->
+                    <defs>
+                        <marker id="arrowhead" markerWidth="10" markerHeight="10" refX="9" refY="3" orient="auto">
+                            <polygon points="0 0, 10 3, 0 6" fill="#2c3e50" />
+                        </marker>
+                        <marker id="arrowhead-small" markerWidth="8" markerHeight="8" refX="7" refY="2.5" orient="auto">
+                            <polygon points="0 0, 8 2.5, 0 5" fill="#2c3e50" />
+                        </marker>
+                    </defs>
+                </svg>
+            </div>
         </div>
         <div>
             <h3>Bottleneck Management</h3>
@@ -16,8 +78,10 @@
                 <strong>Primary Bottlenecks</strong>
                 <ol>
                     <li><strong>Mold Changing & Setup</strong>
-                        <ul><li>SMED principles applied</li>
-                        <li>Target: <10 minutes setup time</li></ul>
+                        <ul>
+                            <li>SMED principles applied</li>
+                            <li>Target: <10 minutes setup time</li>
+                        </ul>
                     </li>
                     <li><strong>Cycle Time:</strong> Cooling & injection constraints</li>
                     <li><strong>Post-Molding:</strong> Printing, labeling, assembly</li>
