Changes and 4Vs

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
             <div data-slide="slide_01_title"></div>
             <div data-slide="slide_02_company_overview"></div>
             <div data-slide="slide_03_objectives"></div>
-            <div data-slide="slide_04_transformation"></div>
-            <div data-slide="slide_05_process_design"></div>
-            <div data-slide="slide_06_automation"></div>
-            <div data-slide="slide_07_workflow"></div>
-            <div data-slide="slide_08_capacity"></div>
-            <div data-slide="slide_09_scheduling"></div>
-            <div data-slide="slide_10_supply_chain"></div>
-            <div data-slide="slide_11_quality"></div>
-            <div data-slide="slide_12_front_office"></div>
-            <div data-slide="slide_13_improvement"></div>
-            <div data-slide="slide_14_sustainability"></div>
-            <div data-slide="slide_15_challenges"></div>
-            <div data-slide="slide_16_thank_you"></div>
+            <div data-slide="slide_04_4vs"></div>
+            <div data-slide="slide_04b_4vs_part2"></div>
+            <div data-slide="slide_05_transformation"></div>
+            <div data-slide="slide_06_process_design"></div>
+            <div data-slide="slide_07_automation"></div>
+            <div data-slide="slide_08_workflow"></div>
+            <div data-slide="slide_09_capacity"></div>
+            <div data-slide="slide_10_scheduling"></div>
+            <div data-slide="slide_11_supply_chain"></div>
+            <div data-slide="slide_12_quality"></div>
+            <div data-slide="slide_13_front_office"></div>
+            <div data-slide="slide_14_improvement"></div>
+            <div data-slide="slide_15_sustainability"></div>
+            <div data-slide="slide_16_challenges"></div>
+            <div data-slide="slide_17_thank_you"></div>
         </div>
     </div>
 
