--- a/slides/slide_04b_4vs_part2.html
+++ b/slides/slide_04b_4vs_part2.html
@@ -12,17 +12,16 @@
                     </div>
                     <h3 style="color: #f39c12; margin: 0; font-size: 1.5em;">VARIATION</h3>
                 </div>
-                <p style="font-size: 1em; margin-bottom: 12px;"><strong>Demand Fluctuation Management</strong></p>
-                <ul style="font-size: 0.95em; line-height: 1.6; margin-bottom: 15px;">
+                <p style="font-size: 0.95em; margin-bottom: 10px;"><strong>Moderate Demand Fluctuation</strong></p>
+                <ul style="font-size: 0.88em; line-height: 1.5; margin-bottom: 12px;">
                     <li>Seasonal demand patterns</li>
                     <li>Export vs. domestic orders</li>
                     <li>Multi-shift <strong>(24/7)</strong> flexibility</li>
-                    <li>Hybrid production: continuous + batch</li>
-                    <li>Responsive to market changes</li>
+                    <li>Balanced capacity utilization</li>
                 </ul>
                 <!-- Variation Wave Chart -->
-                <div style="text-align: center; margin-top: auto;">
-                    <svg width="100%" height="110" viewBox="0 0 300 95" style="filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.1));">
+                <div style="text-align: center; flex: 1; display: flex; align-items: center; justify-content: center;">
+                    <svg width="100%" height="95" viewBox="0 0 300 95" style="filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.1));">
                         <!-- Demand Variation Lines -->
                         <path d="M 20 40 Q 50 15, 80 40 T 140 40 T 200 40 T 260 40" 
                               stroke="#f39c12" stroke-width="3.5" fill="none" opacity="0.9"/>
@@ -43,6 +42,17 @@
                         <text x="188" y="95" font-size="9" fill="#7f8c8d">Export</text>
                     </svg>
                 </div>
+                <!-- Rating Bar: High to Low -->
+                <div style="margin-top: auto;">
+                    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px;">
+                        <span style="font-size: 0.8em; color: #7f8c8d; font-weight: 600;">High</span>
+                        <span style="font-size: 1em; color: #f39c12; font-weight: bold;">Rating: 5/10</span>
+                        <span style="font-size: 0.8em; color: #7f8c8d; font-weight: 600;">Low</span>
+                    </div>
+                    <div style="width: 100%; height: 18px; background: linear-gradient(to right, #f39c12 0%, #fef5e7 100%); border-radius: 10px; position: relative; box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);">
+                        <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; background: #2c3e50; border: 3px solid white; border-radius: 50%; box-shadow: 0 2px 6px rgba(0,0,0,0.3);"></div>
+                    </div>
+                </div>
             </div>
         </div>
         
@@ -55,17 +65,16 @@
                     </div>
                     <h3 style="color: #27ae60; margin: 0; font-size: 1.5em;">VISIBILITY</h3>
                 </div>
-                <p style="font-size: 1em; margin-bottom: 12px;"><strong>High Customer Interaction</strong></p>
-                <ul style="font-size: 0.95em; line-height: 1.6; margin-bottom: 15px;">
-                    <li><span class="metric" style="font-size: 1.8em;">3,000+</span> retail outlets nationwide</li>
-                    <li><span class="metric" style="font-size: 1.8em;">1,950+</span> RFL Exclusive showrooms</li>
-                    <li><strong>24/7</strong> customer service hotline</li>
-                    <li>Strong brand presence & reputation</li>
-                    <li>Direct customer feedback channels</li>
+                <p style="font-size: 0.95em; margin-bottom: 10px;"><strong>Low Operational Visibility</strong></p>
+                <ul style="font-size: 0.88em; line-height: 1.5; margin-bottom: 12px;">
+                    <li><span class="metric" style="font-size: 1.6em;">3,000+</span> retail outlets nationwide</li>
+                    <li><span class="metric" style="font-size: 1.6em;">1,950+</span> RFL Exclusive showrooms</li>
+                    <li>Backend manufacturing operations</li>
+                    <li>Indirect customer feedback channels</li>
                 </ul>
                 <!-- Visibility Network -->
-                <div style="text-align: center; margin-top: auto;">
-                    <svg width="100%" height="110" viewBox="0 0 300 100" style="filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.1));">
+                <div style="text-align: center; flex: 1; display: flex; align-items: center; justify-content: center;">
+                    <svg width="100%" height="95" viewBox="0 0 300 100" style="filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.1));">
                         <!-- Central Hub -->
                         <circle cx="150" cy="50" r="22" fill="#27ae60"/>
                         <text x="150" y="56" text-anchor="middle" font-size="12" fill="white" font-weight="bold">RFL</text>
@@ -95,6 +104,17 @@
                         <circle cx="150" cy="5" r="4" fill="#95a5a6"/>
                         <circle cx="150" cy="95" r="4" fill="#95a5a6"/>
                     </svg>
+                </div>
+                <!-- Rating Bar: High to Low -->
+                <div style="margin-top: auto;">
+                    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px;">
+                        <span style="font-size: 0.8em; color: #7f8c8d; font-weight: 600;">High</span>
+                        <span style="font-size: 1em; color: #27ae60; font-weight: bold;">Rating: 4/10</span>
+                        <span style="font-size: 0.8em; color: #7f8c8d; font-weight: 600;">Low</span>
+                    </div>
+                    <div style="width: 100%; height: 18px; background: linear-gradient(to right, #27ae60 0%, #e8f6f0 100%); border-radius: 10px; position: relative; box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);">
+                        <div style="position: absolute; left: 60%; top: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; background: #2c3e50; border: 3px solid white; border-radius: 50%; box-shadow: 0 2px 6px rgba(0,0,0,0.3);"></div>
+                    </div>
                 </div>
             </div>
         </div>
